--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,17 @@
+amqp==5.0.6
 appdirs==1.4.4
 asgiref==3.4.1
 attrs==21.2.0
+billiard==3.6.4.0
 black==19.10b0
+cached-property==1.5.2
+celery==5.2.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
 click==8.0.1
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
@@ -25,17 +32,21 @@ inflection==0.5.1
 isort==5.9.1
 itypes==1.2.0
 Jinja2==3.0.1
+kombu==5.2.1
+loguru==0.5.3
 mando==0.6.4
 MarkupSafe==2.0.1
 mccabe==0.6.1
 packaging==21.0
 pathspec==0.8.1
 pep8-naming==0.11.1
+prompt-toolkit==3.0.22
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pyparsing==2.4.7
 pytz==2021.1
 radon==4.3.2
+redis==3.5.3
 regex==2021.4.4
 requests==2.26.0
 ruamel.yaml==0.17.14
@@ -47,4 +58,6 @@ typed-ast==1.4.3
 typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.6
+vine==5.0.0
+wcwidth==0.2.5
 zipp==3.4.1
